--- a/vintelo-ejs-main/app/views/pages/usuariosadm.ejs
+++ b/vintelo-ejs-main/app/views/pages/usuariosadm.ejs
@@ -16,7 +16,7 @@
                     <img src="imagens/seta.png" alt="Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Logo">
-                <img src="imagens/quadrado.png" class="img-branca">
+                <img src="imagens/icone saco.png" class="img-branca">
             </nav>
         </header>
     </section>
@@ -31,14 +31,19 @@
                 <img src="imagens/logo.png" class="img-logo">
             </a>
             <nav>
-                <a href="/homeadm">Voltar ao Painel</a>
-                <a href="/brechoadm">Brechós</a>
+                <a href="/homeadm">Home Admin</a>
+                <a href="/denuncias">Denúncias</a>
+                <a href="/avaliacaoadm">Avaliações</a>
+                <a href="/editarbanners">Banners</a>
             </nav>
             <section class="search-profile">
+                <form>
+                    <input type="text" placeholder="Buscar...">
+                </form>
                 <ul>
                     <li><img src="imagens/icone sem cadastro.png" class="maria"></li>
                     <li><img src="imagens/icone saco.png" class="img-tamanho"></li>
-                    <li><img src="imagens/icone coração.png" class="img-tamanho2"></li>
+                    <li><img src="imagens/icone saco.png" class="img-tamanho2"></li>
                 </ul>
             </section>
         </header>
@@ -283,9 +288,20 @@
     <footer class="footer">
         <img src="imagens/logo2.jpeg" alt="Imagem do Rodapé" class="footer-image">
         <section class="social-media">
-            <p class="p-footer">Painel Administrativo</p>
+            <p class="p-footer">Siga nossas redes sociais</p>
+            <ul class="social-links">
+                <li><a href="https://facebook.com" target="_blank" class="social-link">
+                    <img src="imagens/Facebook.png" alt="Facebook">
+                </a></li>
+                <li><a href="https://pinterest.com" target="_blank" class="social-link">
+                    <img src="imagens/Pinterest.png" alt="Pinterest">
+                </a></li>
+                <li><a href="https://www.instagram.com/vintelobrechos" target="_blank" class="social-link">
+                    <img src="imagens/Instagram.png" alt="Instagram">
+                </a></li>
+            </ul>
         </section>
-        <p class="copyright">©2024 Vintélo Admin. Todos os direitos reservados.</p>
+        <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
