--- a/vintelo-ejs-main/app/views/pages/sacola1.ejs
+++ b/vintelo-ejs-main/app/views/pages/sacola1.ejs
@@ -45,7 +45,7 @@
      <section class="oculto-desktop">
     <header>
         <nav class="grid">
-          <a href="/index">
+          <a href="/">
             <img src="imagens/seta.png" alt="Seta Voltar">
           </a>
           <img src="imagens/logo.png" alt="Logo">
