atualização front - lavis

--- a/app/public/css/bossartigo.css
+++ b/app/public/css/bossartigo.css
@@ -456,7 +456,7 @@ body {
     }
     
     body {
-        background-color: #fafafa;
+        background-color: #ffffff;
     }
     
     .desktop-layout {
