--- a/app/public/css/gucciartigo.css
+++ b/app/public/css/gucciartigo.css
@@ -458,7 +458,7 @@ body {
     }
     
     body {
-        background-color: #fafafa;
+        background-color: #ffffff;
     }
     
     .desktop-layout {
@@ -514,7 +514,7 @@ body {
     
     .product-image {
         height: auto;
-        width: 200px;
+        width: 240px;
     }
     
     .sidebar-card {
