--- a/app/public/css/sweer.css
+++ b/app/public/css/sweer.css
@@ -422,7 +422,7 @@ body {
     }
     
     body {
-        background-color: #fafafa;
+        background-color: #ffffff;
     }
     
     .desktop-layout {
@@ -477,7 +477,7 @@ body {
     }
     
     .product-image {
-        height: 220px;
+        height: 320px;
     }
     
     .sidebar-card {
