--- a/app/public/css/tendsustentavel.css
+++ b/app/public/css/tendsustentavel.css
@@ -418,7 +418,7 @@ body {
     }
     
     body {
-        background-color: #fafafa;
+        background-color: #ffffff;
     }
     
     .desktop-layout {
