--- a/app/views/pages/artigo.ejs
+++ b/app/views/pages/artigo.ejs
@@ -69,7 +69,7 @@
 
                 <section class="products-grid">
                     <section class="product-card">
-                        <img src="imagens/metalizado.png" alt="Look Metalizado Elegante" class="product-image">
+                        <img src="imagens/look1.png" alt="Look Metalizado Elegante" class="product-image">
                         <p class="product-description">
                             <strong>Look 1: Elegância Noturna</strong><br>
                             Vestido metalizado dourado com corte midi, perfeito para eventos especiais. 
@@ -78,7 +78,7 @@
                     </section>
                     
                     <section class="product-card">
-                        <img src="imagens/metalizado.png" alt="Look Metalizado Casual" class="product-image">
+                        <img src="imagens/look2.png" alt="Look Metalizado Casual" class="product-image">
                         <p class="product-description">
                             <strong>Look 2: Casual Chic</strong><br>
                             Blusa metalizada prata combinada com jeans escuro. A mistura perfeita 
@@ -87,7 +87,7 @@
                     </section>
                     
                     <section class="product-card">
-                        <img src="imagens/metalizado.png" alt="Look Metalizado Festa" class="product-image">
+                        <img src="imagens/look3.png" alt="Look Metalizado Festa" class="product-image">
                         <p class="product-description">
                             <strong>Look 3: Festa Moderna</strong><br>
                             Saia metalizada bronze com top básico preto. O contraste cria um visual 
@@ -96,7 +96,7 @@
                     </section>
                     
                     <section class="product-card">
-                        <img src="imagens/metalizado.png" alt="Look Metalizado Trabalho" class="product-image">
+                        <img src="imagens/look4.png" alt="Look Metalizado Trabalho" class="product-image">
                         <p class="product-description">
                             <strong>Look 4: Trabalho Estiloso</strong><br>
                             Blazer metalizado discreto sobre look monocromático. Adiciona personalidade 
@@ -116,7 +116,7 @@
 
                 <section class="products-grid">
                     <section class="product-card">
-                        <img src="imagens/metalizado.png" alt="Look Metalizado Verão" class="product-image">
+                        <img src="imagens/look5.png" alt="Look Metalizado Verão" class="product-image">
                         <p class="product-description">
                             <strong>Look 5: Verão Radiante</strong><br>
                             Conjunto metalizado rosé gold para o verão. Leve, fresco e com o brilho 
@@ -125,7 +125,7 @@
                     </section>
                     
                     <section class="product-card">
-                        <img src="imagens/metalizado.png" alt="Look Metalizado Inverno" class="product-image">
+                        <img src="imagens/look6.png" alt="Look Metalizado Inverno" class="product-image">
                         <p class="product-description">
                             <strong>Look 6: Inverno Glamouroso</strong><br>
                             Casaco metalizado sobre vestido escuro. A peça statement que transforma 
@@ -156,7 +156,7 @@
                 </p>
 
                 <section class="product-card">
-                    <img src="imagens/metalizado.png" alt="Look Metalizado Final" class="product-image">
+                    <img src="imagens/look7.jpg" alt="Look Metalizado Final" class="product-image">
                     <p class="product-description">
                         <strong>Look 7: Total Metalizado</strong><br>
                         Para as mais ousadas: look completamente metalizado em tons coordenados. 
@@ -269,28 +269,28 @@
 
             <section class="products-grid">
                 <section class="product-card">
-                    <img src="imagens/metalizado.png" alt="Look Metalizado 1" class="product-image">
+                    <img src="imagens/look1.png" alt="Look Metalizado 1" class="product-image">
                     <p class="product-description">
                         <strong>Look 1:</strong> Vestido metalizado dourado - elegância noturna perfeita.
                     </p>
                 </section>
                 
                 <section class="product-card">
-                    <img src="imagens/metalizado.png" alt="Look Metalizado 2" class="product-image">
+                    <img src="imagens/look2.png" alt="Look Metalizado 2" class="product-image">
                     <p class="product-description">
                         <strong>Look 2:</strong> Blusa metalizada prata com jeans - casual chic.
                     </p>
                 </section>
                 
                 <section class="product-card">
-                    <img src="imagens/metalizado.png" alt="Look Metalizado 3" class="product-image">
+                    <img src="imagens/look3.png" alt="Look Metalizado 3" class="product-image">
                     <p class="product-description">
                         <strong>Look 3:</strong> Saia metalizada bronze - festa moderna.
                     </p>
                 </section>
                 
                 <section class="product-card">
-                    <img src="imagens/metalizado.png" alt="Look Metalizado 4" class="product-image">
+                    <img src="imagens/look4.png" alt="Look Metalizado 4" class="product-image">
                     <p class="product-description">
                         <strong>Look 4:</strong> Blazer metalizado discreto - trabalho estiloso.
                     </p>
