--- a/app/views/pages/menu.ejs
+++ b/app/views/pages/menu.ejs
@@ -31,7 +31,7 @@
                 </form>
                 <ul>
                     <li><a href="/criarbrech" ></a><img src="imagens/add brecho.png" class="img-tamanho"> </li>
-                    <li><a href="#" ><img src="imagens/imagem sem cadastro.avif" class="maria"></a> </li>
+                    <li><a href="#" ><img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/imagem sem cadastro.avif' %>" class="maria"></a> </li>
                     <li><a href="/carrinho" ><img src="imagens/carrinho3.png" class="img-tamanho"> </a></li>
                     <li><a href="/favoritos" ><img src="imagens/icone coraçao.png" class="img-tamanho"> </a></li>
                 </ul>
@@ -42,9 +42,9 @@
     <main>
         <aside class="user-sidebar">
             <section class="user-info">
-                <img src="imagens/imagem sem cadastro.avif" alt="Foto de perfil de Maria de Lourdes">
-                <h2>laviviana</h2>
-                <p>email@exemplo.com</p>
+                <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/imagem sem cadastro.avif' %>" alt="Foto de perfil">
+                <h2><%= autenticado && autenticado.user_usuario ? autenticado.user_usuario : 'Usuário' %></h2>
+                <p><%= autenticado && autenticado.email ? autenticado.email : 'email@exemplo.com' %></p>
             </section>
             <nav class="user-menu">
                 <a href="#">Geral</a>
