--- a/app/views/pages/menuvendedor.ejs
+++ b/app/views/pages/menuvendedor.ejs
@@ -32,7 +32,7 @@
                 </form>
                 <ul>
                     <li><a href="criarbrecho/" ></a><img src="imagens/add brecho.png" class="img-tamanho"> </li>
-                    <li><a href="/cadastro" ></a><img src="imagens/imagem sem cadastro.avif" class="maria"> </li>
+                    <li><a href="/cadastro" ></a><img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/imagem sem cadastro.avif' %>" class="maria"> </li>
                     <li><a href="/favoritos" ><img src="imagens/icone coraçao.png" class="img-tamanho"> </a></li>
                 </ul>
             </section>
@@ -47,7 +47,7 @@
             </a>
             <img src="imagens/logo.png" alt="Vintélo">
             <a href="/menuvendedor">
-                <img src="imagens/imagem sem cadastro.avif" alt="Menu">
+                <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/imagem sem cadastro.avif' %>" alt="Menu">
             </a>
         </nav>
     </header>
@@ -55,9 +55,9 @@
     <main>
         <aside class="user-sidebar">
             <section class="user-info">
-                <img src="imagens/imagem sem cadastro.avif" alt="Foto de perfil de Maria de Lourdes">
-                <h2>Laviviana</h2>
-                <p>laviviana@exemplo.com</p>
+                <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/imagem sem cadastro.avif' %>" alt="Foto de perfil">
+                <h2><%= autenticado && autenticado.user_usuario ? autenticado.user_usuario : 'Vendedor' %></h2>
+                <p><%= autenticado && autenticado.email ? autenticado.email : 'email@exemplo.com' %></p>
             </section>
             <nav class="user-menu">
                 <a href="/informacao">Informação da conta</a>
